--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ body {
     display: flex;
     align-items: center;
     margin: 30px 0;
-    justify-content: end;
+    justify-content: center;
 }
 
 .logo{
